# drcbot-rs

./: Cargo.toml  locale.toml
src/: commands.rs  data.rs  locale.rs  main.rs
src/commands/: mod.rs  music.rs  reaction_roles.rs  reactionroles.rs
src/commands/music/: admin.rs  controls.rs  mod.rs  playback.rs
src/commands/reaction_roles/: messages.rs  mod.rs  roles.rs
