[package]
name = "drcbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
mongodb = "2.5.0"
serde = "1.0.163"
serde_derive = "1.0.163"
toml = "0.7.3"
poise = "0.5.5"
chrono = "0.4.24"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.8.1"
songbird = {version = "0.3.2", features = ["yt-dlp", "builtin-queue"]}
url = "2.3.1"
rgb = "0.8.36"

reqwest = "0.11.17"
image = "0.24.6"
color-thief = "0.2"