[package]
name = "drcbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "3"
serde = "1"
serde_derive = "1"
toml = "0.8"
poise = "0.6"
chrono = "0.4"
itertools = "0.13"
regex = "1"
songbird = {version = "0.4", features = ["builtin-queue"]}
url = "2"
rgb = "0.8"

reqwest = "0.11"
image = "0.25"
color-thief = "0.2"
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
